# -AI-Powered-Real-Estate-Agent-Automating-Property-Search-Investment-Insights-

./: .dockerignore  .env.example  .gitignore  Ai_RealAgent.py  CONTRIBUTING.md  Day_2.ipynb  Directions.md  Dockerfile  README.md  ai_real_estate_agent.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: ARCHITECTURE.md
src/: __init__.py  health.py
src/agents/: __init__.py  base_agent.py  investment_agent.py  market_trend_agent.py  search_agent.py
src/database/: __init__.py  crud.py  models.py  session.py
src/schemas/: __init__.py  property.py
src/services/: __init__.py  ai_service.py  cache_service.py  scraping_service.py
src/ui/: app.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_agents.py  test_database.py  test_services.py
